<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividad.actividadProducto"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/ingrese_codigo"
                android:textSize="15dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textAlignment="textEnd"/>

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/producto_codigo"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/ingrese_nombre"
                android:textSize="15dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textAlignment="textEnd"/>

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/producto_nombre"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/ingrese_precio"
                android:textSize="15dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textAlignment="textEnd"/>

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/producto_precio"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/seleccione_categoria"
                android:textSize="15dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textAlignment="textEnd"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/categoria_id"
                android:textAlignment="center"></Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/seleccione_marca"
                android:textSize="15dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textAlignment="textEnd"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/marca_id"
                android:textAlignment="center"></Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/seleccione_unidad"
                android:textSize="15dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textAlignment="textEnd"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/unidad_id"
                android:textAlignment="center"></Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/producto_id"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:inputType="text"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/btn_registrar_producto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/registrar"
                android:textSize="15dp"
                android:drawableLeft="@drawable/ic_menu_send"
                android:textColor="#ffff"
                android:backgroundTint="#ef9a9a"/>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>