<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".actividad.actividadUnidad">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="50sp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/ingrese_codigo"
                android:textSize="15sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textAlignment="textEnd"
                android:gravity="end" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:id="@+id/unidad_codigo"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:inputType="text"
                android:gravity="center_horizontal" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="50sp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/ingrese_nombre"
                android:textSize="15sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textAlignment="textEnd"
                android:gravity="end" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:id="@+id/unidad_nombre"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:inputType="text"
                android:gravity="center_horizontal" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="50sp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/unidad_id"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:visibility="invisible"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_registrar_unidad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/registrar"
                android:textSize="15sp"
                android:drawableLeft="@drawable/ic_menu_send"
                android:textColor="#ffff"
                app:backgroundTint="#ef9a9a"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>